--- a/car-wash/package.json
+++ b/car-wash/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/inter": "^4.5.14",
+    "@prisma/client": "^4.8.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -24,5 +25,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "prisma": "^4.8.1"
   }
 }
