--- a/car-wash/package.json
+++ b/car-wash/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/inter": "^4.5.14",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.8.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -21,6 +22,7 @@
     "eslint-config-next": "13.0.4",
     "framer-motion": "^6.5.1",
     "next": "13.0.4",
+    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
