--- a/car-wash/package.json
+++ b/car-wash/package.json
@@ -24,13 +24,16 @@
     "moment": "^2.29.4",
     "next": "13.0.4",
     "next-auth": "^4.23.1",
+    "next-swagger-doc": "^0.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "swagger-ui-react": "^5.5.0",
     "typescript": "4.9.3",
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/swagger-ui-react": "^4.18.0",
     "prisma": "^4.8.1"
   }
 }
