--- a/car-wash/package.json
+++ b/car-wash/package.json
@@ -34,7 +34,9 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^11.2.0",
     "@types/swagger-ui-react": "^4.18.0",
-    "prisma": "^4.8.1"
+    "prisma": "^4.8.1",
+    "prisma-erd-generator": "^1.11.2"
   }
 }
