--- a/car-wash/package.json
+++ b/car-wash/package.json
@@ -28,6 +28,7 @@
     "next-swagger-doc": "^0.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
     "swagger-ui-react": "^5.5.0",
     "typescript": "4.9.3",
